<resources>
    <string name="app_name" translatable="false">CashFlow</string>

    <string name="Accounts">Accounts</string>
    <string name="Operations">Operations</string>
    <string name="Categories">Categories</string>
    <string name="Settings">Settings</string>
    <string name="account">Account</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="sum">Sum</string>
    <string name="to">To</string>
    <string name="type">Type</string>
    <string name="out">Out</string>
    <string name="transfer">Transfer</string>
    <string name="in">In</string>
    <string name="from">From</string>
    <string name="name">Name</string>
    <string name="digit_0" translatable="false">0</string>
    <string name="digit_1" translatable="false">1</string>
    <string name="digit_2" translatable="false">2</string>
    <string name="digit_3" translatable="false">3</string>
    <string name="digit_4" translatable="false">4</string>
    <string name="digit_5" translatable="false">5</string>
    <string name="digit_6" translatable="false">6</string>
    <string name="digit_7" translatable="false">7</string>
    <string name="digit_8" translatable="false">8</string>
    <string name="digit_9" translatable="false">9</string>
    <string name="more">more</string>
    <string name="next">next</string>
    <string name="budget">Budget</string>
    <string name="preferences">Preferences</string>
    <string name="pref_show_operation_master_on_start" translatable="false">pref_show_operation_master_on_start</string>
    <string name="title_show_operation_master">Operation master</string>
    <string name="fact">Fact</string>
    <string name="operation_type">Operation type</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>

    <string name="pref_operation_master_account_pos" translatable="false">pref_operation_master_account_pos</string>
    <string name="pref_operation_master_analytic_in" translatable="false">pref_operation_master_analytic_pos</string>
    <string name="pref_operation_master_operation_type_pos" translatable="false">pref_operation_master_operation_type_pos</string>
    <string name="pref_operation_master_analytic_out" translatable="false">pref_operation_master_analytic_out</string>
    <string name="pref_operation_master_analytic_transfer" translatable="false">pref_operation_master_analytic_transfer</string>
    <string name="file_system">File system</string>
    <string name="google_drive" translatable="false">Google drive</string>
    <string name="pref_selected_tab" translatable="false">selected_tab</string>
    <string name="cashflow">Cashflow</string>
    <string name="operation_master">Operation master</string>
    <string name="total_sum">Total sum</string>
    <string name="new_account">New account</string>
    <string name="new_category">New category</string>
    <string name="new_operation">New operation</string>
    <string name="operation">Operation</string>
    <string name="save">Save</string>
    <string name="no_account_selected">No account selected!!!</string>
    <string name="no_analytic_selected">No analytic selected!!!</string>
    <string name="no_sum">Type the sum</string>
    <string name="error">Error</string>
    <string name="operation_created">Operation created!!!</string>
    <string name="undo">UNDO</string>
    <string name="operation_deleted">Operation deleted</string>
    <string name="error_fill_title">Fill title</string>
    <string name="error_fill_budget">Fill budget</string>
    <string name="error_fill_sum">Fill sum</string>
    <string name="summary_show_operation_master">Show on start</string>
    <string name="summary_dont_show_operation_master">Don\'t show on start</string>
    <string name="error_choose_account">Choose account</string>
    <string name="error_choose_category">Choose category</string>
    <string name="error_choose_rep_account">Choose recipient account</string>
    <string name="connect">Connect</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="dialog_delete_operation">Delete operation?</string>
    <string name="chart">Chart</string>
    <string name="delete">Delete</string>
    <string name="time">Time</string>
    <string name="pref_analytic_chart_show_in_graphic" translatable="false">pref_analytic_chart_show_in_graphic</string>
    <string name="pref_analytic_chart_show_out_graphic" translatable="false">pref_analytic_chart_show_out_graphic</string>
    <string name="pref_analytic_chart_show_in_budget_graphic" translatable="false">pref_analytic_chart_show_in_budget_graphic</string>
    <string name="pref_analytic_chart_show_out_budget_graphic" translatable="false">pref_analytic_chart_show_out_budget_graphic</string>
    <string name="pref_analytic_chart_show_cashflow_graphic" translatable="false">pref_analytic_chart_show_cashflow_graphic</string>
    <string name="pref_analytic_chart_show_delta_graphic" translatable="false">pref_analytic_chart_show_delta_graphic</string>
    <string name="no_type">Select type</string>


</resources>
