<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/digit_1"
        style="@style/Widget.AppCompat.Button.Borderless.Digit"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/digit_1" />

    <Button
        android:id="@+id/digit_2"
        style="@style/Widget.AppCompat.Button.Borderless.Digit"
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/digit_2" />

    <Button
        android:id="@+id/digit_3"
        style="@style/Widget.AppCompat.Button.Borderless.Digit"
        android:layout_column="2"
        android:layout_row="0"
        android:text="@string/digit_3" />

    <Button
        android:id="@+id/digit_4"
        style="@style/Widget.AppCompat.Button.Borderless.Digit"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/digit_4" />

    <Button
        android:id="@+id/digit_5"
        style="@style/Widget.AppCompat.Button.Borderless.Digit"
        android:layout_column="1"
        android:layout_row="1"
        android:text="@string/digit_5" />

    <Button
        android:id="@+id/digit_6"
        style="@style/Widget.AppCompat.Button.Borderless.Digit"
        android:layout_column="2"
        android:layout_row="1"
        android:text="@string/digit_6" />

    <Button
        android:id="@+id/digit_9"
        style="@style/Widget.AppCompat.Button.Borderless.Digit"
        android:layout_column="2"
        android:layout_row="2"
        android:text="@string/digit_9" />

    <Button
        android:id="@+id/digit_0"
        style="@style/Widget.AppCompat.Button.Borderless.Digit"
        android:layout_column="1"
        android:layout_row="3"
        android:text="@string/digit_0" />

    <ImageButton
        android:id="@+id/digit_back"
        style="@style/Widget.AppCompat.Button.Borderless.Digit"
        android:layout_column="2"
        android:layout_row="3"
        android:src="@drawable/ic_backspace"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/digit_7"
        style="@style/Widget.AppCompat.Button.Borderless.Digit"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/digit_7" />

    <Button
        android:id="@+id/digit_8"
        style="@style/Widget.AppCompat.Button.Borderless.Digit"
        android:layout_column="1"
        android:layout_row="2"
        android:text="@string/digit_8" />
</GridLayout>