<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_summary" android:icon="@android:drawable/ic_menu_add"
            android:title="@string/summary" />
        <item android:id="@+id/nav_accounts" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/Accounts" />
         <item android:id="@+id/nav_categories" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/Categories" />
        <item android:id="@+id/nav_operations" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/Operations" />
        <item android:id="@+id/nav_analytics" android:icon="@drawable/ic_analitic"
            android:title="@string/analytics" />
        <item android:id="@+id/nav_backup" android:icon="@android:drawable/ic_menu_add"
            android:title="@string/backup" />
    </group>

    <group android:checkableBehavior="none">
        <item android:id="@+id/nav_settings" android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/Settings" />
     </group>

</menu>