<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/digit_1"
        style="@style/Widget.AppCompat.Button.Borderless.Digit"
        android:layout_column="0"
        android:layout_row="0"
        android:fontFamily="sans-serif"
        android:text="@string/digit_1"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <Button
        android:id="@+id/digit_2"
        style="@style/Widget.AppCompat.Button.Borderless.Digit"
        android:layout_column="1"
        android:layout_row="0"
        android:fontFamily="sans-serif"
        android:text="@string/digit_2"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <Button
        android:id="@+id/digit_3"
        style="@style/Widget.AppCompat.Button.Borderless.Digit"
        android:layout_column="2"
        android:layout_row="0"
        android:fontFamily="sans-serif"
        android:text="@string/digit_3"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <Button
        android:id="@+id/digit_4"
        style="@style/Widget.AppCompat.Button.Borderless.Digit"
        android:layout_column="0"
        android:layout_row="1"
        android:fontFamily="sans-serif"
        android:text="@string/digit_4"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <Button
        android:id="@+id/digit_5"
        style="@style/Widget.AppCompat.Button.Borderless.Digit"
        android:layout_column="1"
        android:layout_row="1"
        android:fontFamily="sans-serif"
        android:text="@string/digit_5"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <Button
        android:id="@+id/digit_6"
        style="@style/Widget.AppCompat.Button.Borderless.Digit"
        android:layout_column="2"
        android:layout_row="1"
        android:fontFamily="sans-serif"
        android:text="@string/digit_6"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <Button
        android:id="@+id/digit_9"
        style="@style/Widget.AppCompat.Button.Borderless.Digit"
        android:layout_column="2"
        android:layout_row="2"
        android:fontFamily="sans-serif"
        android:text="@string/digit_9"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <Button
        android:id="@+id/digit_0"
        style="@style/Widget.AppCompat.Button.Borderless.Digit"
        android:layout_column="1"
        android:layout_row="3"
        android:fontFamily="sans-serif"
        android:text="@string/digit_0"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <ImageButton
        android:id="@+id/digit_back"
        style="@style/Widget.AppCompat.Button.Borderless.Digit"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="fill"
        android:layout_row="3"
        android:src="@drawable/ic_backspace"
        android:tint="@color/colorPrimaryDark"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/digit_7"
        style="@style/Widget.AppCompat.Button.Borderless.Digit"
        android:layout_column="0"
        android:layout_row="2"
        android:fontFamily="sans-serif"
        android:text="@string/digit_7"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <Button
        android:id="@+id/digit_8"
        style="@style/Widget.AppCompat.Button.Borderless.Digit"
        android:layout_column="1"
        android:layout_row="2"
        android:fontFamily="sans-serif"
        android:text="@string/digit_8"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />
</GridLayout>