<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appbar">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/appbar"
        android:layout_above="@+id/buttomBar">
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_below="@+id/appbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/type_group"
        android:checkedButton="@+id/btnIn"
        tools:ignore="NotSibling">

        <RadioButton
            android:text="@string/in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btnIn"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@android:color/transparent"
            android:background="@drawable/master_radiobutton"
            android:layout_margin="8dp" />

        <RadioButton
            android:text="@string/out"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btnOut"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@android:color/transparent"
            android:background="@drawable/master_radiobutton"
            android:layout_margin="8dp" />

        <RadioButton
            android:text="@string/transfer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btnTransfer"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@android:color/transparent"
            android:background="@drawable/master_radiobutton"
            android:layout_margin="8dp" />
    </RadioGroup>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_account"
        android:layout_below="@+id/type_group"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:spinnerMode="dialog"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_analitic"
            android:layout_below="@+id/spinner_account"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:spinnerMode="dialog"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"/>

        <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/operation_master_sum"
            android:layout_below="@+id/spinner_analitic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/operation_master_sum"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_above="@+id/keyboard"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

        <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
            android:id="@+id/keyboard"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp">

        <Button
            android:text="@string/digit_1"
            android:id="@+id/digit_1"
            android:layout_row="0"
            android:layout_column="0"
            style="@style/Widget.AppCompat.Button.Borderless.Digit" />

        <Button
            android:text="@string/digit_2"
            android:id="@+id/digit_2"
            android:layout_column="1"
            android:layout_row="0"
            style="@style/Widget.AppCompat.Button.Borderless.Digit" />

        <Button
            android:text="@string/digit_3"
            android:id="@+id/digit_3"
            android:layout_column="2"
            android:layout_row="0"
            style="@style/Widget.AppCompat.Button.Borderless.Digit"/>

        <Button
            android:text="@string/digit_4"
            android:id="@+id/digit_4"
            android:layout_row="1"
            android:layout_column="0"
            style="@style/Widget.AppCompat.Button.Borderless.Digit"/>

        <Button
            android:text="@string/digit_5"
            android:id="@+id/digit_5"
            android:layout_column="1"
            android:layout_row="1"
            style="@style/Widget.AppCompat.Button.Borderless.Digit"/>

        <Button
            android:text="@string/digit_6"
            android:id="@+id/digit_6"
            android:layout_row="1"
            android:layout_column="2"
            style="@style/Widget.AppCompat.Button.Borderless.Digit"/>

        <Button
            android:text="@string/digit_9"
            android:id="@+id/digit_9"
            android:layout_row="2"
            android:layout_column="2"
            style="@style/Widget.AppCompat.Button.Borderless.Digit"/>

        <Button
            android:text="@string/digit_0"
            android:id="@+id/digit_0"
            android:layout_column="1"
            android:layout_row="3"
            style="@style/Widget.AppCompat.Button.Borderless.Digit"/>

        <ImageButton
            android:id="@+id/digit_back"
            android:layout_column="2"
            android:layout_row="3"
            style="@style/Widget.AppCompat.Button.Borderless.Digit"
            android:src="@drawable/ic_backspace"
            tools:ignore="ContentDescription" />

        <Button
            android:text="@string/digit_7"
            android:id="@+id/digit_7"
            android:layout_row="2"
            android:layout_column="0"
            style="@style/Widget.AppCompat.Button.Borderless.Digit"/>

        <Button
            android:text="@string/digit_8"
            android:id="@+id/digit_8"
            android:layout_column="1"
            android:layout_row="2"
            style="@style/Widget.AppCompat.Button.Borderless.Digit"/>
    </GridLayout>

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/buttomBar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/operation_master_more"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/operation_master_next"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>


</RelativeLayout>