<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appbar">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_above="@+id/keyboard">

        <RadioGroup
            android:id="@+id/type_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/appbar"
            android:checkedButton="@+id/btnIn"
            android:orientation="horizontal"
            tools:ignore="NotSibling">

            <RadioButton
                android:id="@+id/btnIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/master_radiobutton"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/in" />

            <RadioButton
                android:id="@+id/btnOut"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/master_radiobutton"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/out" />

            <RadioButton
                android:id="@+id/btnTransfer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/master_radiobutton"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/transfer" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="8dp">

            <Spinner
                android:id="@+id/spinner_account"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/type_group"
                android:layout_weight="3"
                android:background="@drawable/a" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/arrow_forward"
                android:contentDescription="TO" />

            <Spinner
                android:id="@+id/spinner_analytic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/spinner_account"
                android:layout_weight="3"
                android:background="@drawable/a" />

        </LinearLayout>

        <TextView
            android:id="@+id/operation_master_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/keyboard"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:gravity="center"
            android:textSize="30sp" />

    </LinearLayout>

    <GridLayout
        android:id="@+id/keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonBar"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/digit_1"
            style="@style/Widget.AppCompat.Button.Borderless.Digit"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/digit_1" />

        <Button
            android:id="@+id/digit_2"
            style="@style/Widget.AppCompat.Button.Borderless.Digit"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/digit_2" />

        <Button
            android:id="@+id/digit_3"
            style="@style/Widget.AppCompat.Button.Borderless.Digit"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/digit_3" />

        <Button
            android:id="@+id/digit_4"
            style="@style/Widget.AppCompat.Button.Borderless.Digit"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/digit_4" />

        <Button
            android:id="@+id/digit_5"
            style="@style/Widget.AppCompat.Button.Borderless.Digit"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/digit_5" />

        <Button
            android:id="@+id/digit_6"
            style="@style/Widget.AppCompat.Button.Borderless.Digit"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/digit_6" />

        <Button
            android:id="@+id/digit_9"
            style="@style/Widget.AppCompat.Button.Borderless.Digit"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/digit_9" />

        <Button
            android:id="@+id/digit_0"
            style="@style/Widget.AppCompat.Button.Borderless.Digit"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/digit_0" />

        <ImageButton
            android:id="@+id/digit_back"
            style="@style/Widget.AppCompat.Button.Borderless.Digit"
            android:layout_column="2"
            android:layout_row="3"
            android:src="@drawable/ic_backspace"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/digit_7"
            style="@style/Widget.AppCompat.Button.Borderless.Digit"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/digit_7" />

        <Button
            android:id="@+id/digit_8"
            style="@style/Widget.AppCompat.Button.Borderless.Digit"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/digit_8" />
    </GridLayout>

    <LinearLayout
        android:id="@+id/buttonBar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/operation_master_more"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/operation_master_next"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>


</RelativeLayout>