<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/name"
            android:layout_column="0"
            android:labelFor="@+id/category_detail_name"
            android:gravity="center_vertical"
            android:layout_weight="0.1" />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/category_detail_name"
                android:layout_column="1"
            android:layout_weight="1"
            android:inputType="text" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/type"
            android:layout_column="0"
            android:layout_weight="0.1" />

        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
            android:layout_column="1"
            android:layout_weight="1">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/in"
                android:id="@+id/category_detail_in"
                android:checked="true" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/out"
                android:id="@+id/category_detail_out"
                android:checked="false" />

        </RadioGroup>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:text="@string/budget"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:labelFor="@+id/category_detail_budget"
            android:gravity="center_vertical"
            android:layout_weight="0.1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:layout_column="1"
            android:id="@+id/category_detail_budget"
            android:gravity="center_vertical|end"/>
    </TableRow>


</TableLayout>